<resources>
    <string name="app_name">My Bike - Your Bike</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="addbike_title">Enter data about your bike</string>
    <string name="rentbike_title">Choose bike to rent</string>
    <string name="rent_bike">Rent Bike</string>
    <string name="add_bike">Add Bike</string>


    <string name="hint_brand">Brand of your bike</string>
    <string name="hint_price">Price of your bike</string>
    <string name="hint_city">City for renting</string>
    <string name="hint_phone">Phone number</string>


    <string name="back_to_choice">Back</string>
    <string name="add_the_bike">Add Bike</string>
    <string name="rent_the_bike">Rent Bike</string>

    <string name="emailpassword_status_fmt">Hallo User  %1$s - verified: %2$b</string>
    <string name="emailpassword_title_text">Please, sign in or create an account to rent a Bike</string>


    <string name="passwordless_status_fmt">Hallo User %1$s - verified: %2$b</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>


    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
</resources>
