<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addbike_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"

    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!--<ImageView-->
        <!--android:id="@+id/icon"-->
        <!--style="@style/ThemeOverlay.FirebaseIcon"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="202dp"-->
        <!--android:contentDescription="@string/desc_firebase_lockup"-->
        <!--android:src="@drawable/bikestrack"-->
        <!--android:visibility="visible"-->
        <!--tools:visibility="visible" />-->

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/title_right_margin"
            android:layout_marginLeft="@dimen/title_left_margin"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/addbike_title"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_brand"
                android:inputType="text" />

            <EditText
                android:id="@+id/Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_price"
                android:inputType="number" />

            <EditText
                android:id="@+id/City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_city"
                android:inputType="text" />
            <EditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_phone"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_300"
        android:gravity="center_vertical">


        <LinearLayout
            android:id="@+id/AddBackButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailPasswordFields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/BacktoChoiceButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_to_choice"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/AddTheBikeButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_the_bike"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:id="@+id/signedInButtons"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingLeft="16dp"-->
            <!--android:paddingRight="16dp"-->
            <!--android:visibility="gone"-->
            <!--android:weightSum="2.0">-->

     <!---->

        <!--</LinearLayout>-->

    </RelativeLayout>

</LinearLayout>
